--- a/pages/leonardo-social-platform/styles/globals.css
+++ b/pages/leonardo-social-platform/styles/globals.css
@@ -18,3 +18,13 @@ a {
 .mainContainer{
   margin-top: 20px;
 }
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
