made topics by tags

--- a/pages/leonardo-social-platform/styles/post.module.css
+++ b/pages/leonardo-social-platform/styles/post.module.css
@@ -8,3 +8,13 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.clickable {
+  color: inherit; /* blue colors from links */
+  text-decoration: inherit; /* no underline */
+}
+
+.clickable:hover {
+  color: inherit; /* blue colors from links */
+  text-decoration: inherit; /* no underline */
+}
