Created votes system

--- a/pages/leonardo-social-platform/styles/post.module.css
+++ b/pages/leonardo-social-platform/styles/post.module.css
@@ -18,3 +18,7 @@
   color: inherit; /* blue colors from links */
   text-decoration: inherit; /* no underline */
 }
+
+.likesNum {
+  text-align: center;
+}
